--- a/es/coding/comments.html
+++ b/es/coding/comments.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <title>Comments</title>
+  <title>Comentarios</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-Los comentarios comienzan con una barra doble `//`. Everything after `//` al final de la línea es ignorado por el compilador.
+Un **comentario** comienzan con una barra doble `//`. Luego todo al final de la línea es ignorado por el compilador.
 
 ```sb3
 // comentarios aqui
