--- a/es/coding/constants.html
+++ b/es/coding/constants.html
@@ -18,7 +18,7 @@ Las constantes se declaran estática o dinámicamente. Cada [modo de edición](.
 Para declarar una nueva constante en el código, use la construcción `CONST..END`:\
 \
 `CONST`\
-`    <constant name> = <constant value>`\
+`    <nombre> = <valor>`\
 `END`\
 \
 Un nombre constante es cualquier identificador permitido (una combinación de letras, números y `_`). Hay nombres reservados por el compilador que no se pueden usar, como `Continue`, `Break`, `And`, etc. (mire `compiler.ini`).
