--- a/es/coding/keywords.html
+++ b/es/coding/keywords.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Keywords</title>
+  <title>Palabras Claves</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,20 +9,20 @@
 </head>
 <body>
 
-A keyword is a single word that replaces the opcode for simple commands.\
-For example, the keyword WAIT can be used  instead of opcode 0001.\
-To demonstrate:
+Una **palabra clave** es una sola palabra que reemplaza el opcode para comandos simples.
+Por ejemplo, la palabra clave `WAIT` se puede utilizar en lugar del opcode `0001`.
+Para demostrar:
 
 ```sb3
 wait 0
 ```
 
-instead of
+en vez de
 
 ```sb3
 0001: wait 0
 ```
 
-The keywords list can be displayed by pressing Ctrl+Space.
+La lista de palabras clave se puede mostrar presionando `Ctrl+Space`.
 
 <script src="../../js/main.min.js"></script>
