--- a/es/coding/loops.html
+++ b/es/coding/loops.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Loops</title>
+  <title>Bucles</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,22 +9,22 @@
 </head>
 <body>
 
-A **loop **is a statement which allows code to be repeatedly executed. Sanny Builder supports three kinds of controls loops: [for](#FOR..END), [while](#WHILE..END), [repeat](#REPEAT..UNTIL).
+Un **bucle** es una declaración que permite que el código se ejecute repetidamente. Sanny Builder es compatible con tres tipos de controles de bucles: [for](#for..end), [while](#while..end), [repeat](#repeat..until).
 
 ## FOR..END
 
-The `FOR` loop has a strictly certain number of iterations (repetitions).
+El bucle `FOR` tiene un número estrictamente determinado de iteraciones (repeticiones).
 
-Syntax:\
-`FOR <loop variable> = <initial value> TO/DOWNTO <final value> [step = 1]`\
-`<the loop body>`\
+Sintaxis:\
+`FOR <variable del bucle> = <valor inicial> TO/DOWNTO <valor final> [paso = 1]`\
+`    <cuerpo del bucle>`\
 `END`\
 \
-`<loop variable>` - a [variable](variables.md) used as a counter for iterations\
-`<initial value>` - a value of the loop variable before the first iteration (any value including a [model identifier](data-types.md#model-names))\
-`TO` or `DOWNTO`** **- increment or decrement the loop variable between iterations\
-`<final value>` - a value of the loop variable after the last iteration (any value including a model identifier)\
-`<step>` - an optional value the loop variable will be incremented or decremented with between iterations. By default it is equal to `1`.
+`<variable del bucle>` - una [variable](variables.md) utilizada como contador para iteraciones\
+`<valor inicial>` - un valor de la variable de bucle antes de la primera iteración (cualquier valor inclusive el [ID de un modelo](data-types.md#model-names))\
+`TO` ó `DOWNTO` - incrementar o disminuir la variable de bucle entre iteraciones\
+`<valor final>` - un valor de la variable de bucle después de la última iteración (cualquier valor inclusive el ID de un modelo)\
+`<paso>` - un valor opcional con el que se aumentará o disminuirá la variable de bucle entre iteraciones. Por defecto es igual a `1`.
 
 ```sb3
 var
@@ -37,7 +37,7 @@ FOR $MyCounter = 1 to $final step 2
 end
 ```
 
-If the `loop variable` is not [declared](variables.md#var-end-construct) with any type before the loop it gets the `Integer` type. If  `initial value`, `final value` or `step` are variables, they get the same type the `loop variable` has To use floating-point numbers for the initial and final values, declare the loop variable with the `Float `type.
+Si la `variable del bucle` no se [declara](variables.md#var-end-construct) con ningún tipo antes del bucle, obtiene el tipo `Integer`. Si el `valor inicial`, el `valor final` o el `paso` son variables, obtienen el mismo tipo que la variable de bucle. Para usar números de punto flotante para los valores inicial y final, declare la variable de bucle con el tipo `Float`.
 
 ```sb3
 var
@@ -48,19 +48,19 @@ FOR $MyCounter = 1.0 to $final step 2.0
 end
 ```
 
-Variables `$MyCounter` and `$final` both have the `Float` type after the loop.
+Las variable `$MyCounter` y `$final` tienen el tipo `Float` después del bucle.
 
 ## WHILE..END
 
-Syntax:
+Sintaxis:
 ```
-WHILE &lt;loop condition&gt;
-  &lt;the loop body&gt;
+WHILE <condición del bucle>
+  <cuerpo del bucle>
 END
 ```
 
-`loop condition` - a single conditional opcode\
-`loop body` - commands to execute on each iteration; can be omitted
+`condición del bucle` - un único opcode condicional\
+`cuerpo del bucle` - comandos a ejecutar en cada iteración; puede ser omitido
 
 ```sb3
 while not #AK47.Available
@@ -68,117 +68,117 @@ while not #AK47.Available
 end
 ```
 
-The `WHILE` loop works while the loop condition is true. The condition is evaluated before a loop iteration. Hence, if the condition is false, the loop body never gets executed.
+El bucle `WHILE` funciona mientras la condición del bucle sea verdadera. La condición se evalúa antes de una iteración de bucle. Por lo tanto, si la condición es falsa, el cuerpo del bucle nunca se ejecuta.
 
 ```sb3
 $var = 10
 
-while $var &gt; 11
+while $var > 11
     inc($var)
 end
 
-// as the loop condition is false, inc($var) never gets executed
+// como la condición del bucle es falsa, inc($var) nunca se ejecuta
 ```
 
-[Constants](constants.md) `True` and `False` can be used as a loop condition.
+Las [constantes](constants.md) `True` y `False` se pueden utilizar como condición de bucle.
 
 ```sb3
 while true
-    &lt;loop body&gt;
+    <cuerpo del bucle>
 end
 ```
 
-This loop body executes infinitely until the loop is stopped with the `Break` command.
+Este <cuerpo del bucle> se ejecuta infinitamente hasta que es detenido con el comando `Break`
 
 ```sb3
 while false
-    &lt;loop body&gt;
+    <cuerpo del bucle>
 end
 ```
 
-This loop is ignored by the compiler as the condition is never met.
+El compilador ignora este bucle ya que la condición nunca se cumple.
 
 {% hint style="info" %}
-Currently the compiler accepts only one opcode in the loop condition, but you can check more conditions before the loop body and use the commands `Break `and `Continue`.
+Actualmente, el compilador acepta solo un opcode en la condición del bucle, pero puede verificar más condiciones antes del cuerpo del bucle y usar los comandos `Break` y `Continue`.
 
 ```sb3
 while true
     if and
-       $var &gt;= 0
-       $var &lt;= 100
+       $var >= 0
+       $var <= 100
     then
        Break
     end
-    // loop executes while $var is in the range [0...100]
+    // el bucle se ejecuta mientras $var está en el rango [0...100]
       
-    &lt;loop body&gt;
+    <cuerpo del bucle>
 end
 ```
 {% endhint %}
 
 ## REPEAT..UNTIL
 
-Syntax:
+Sintaxis:
 ```
 REPEAT
-    &lt;the loop body&gt;
-UNTIL &lt;loop condition&gt;
+    <cuerpo del bucle>
+UNTIL <condición del bucle>
 ```
 
-`loop body` - commands to execute on each iteration; can be omitted\
-`loop condition` - a single conditional opcode
+`loop body` - comandos a ejecutar en cada iteración; puede ser omitido\
+`loop condition` - un único opcode condicional
 
-The `REPEAT..UNTIL` loop executes until the loop condition returns false. The condition is evaluated after iteration therefore the loop is guaranteed to be executed at least once.
+El bucle `REPEAT..UNTIL` se ejecuta hasta que la condición del bucle devuelve falso. La condición se evalúa después de la iteración, por lo tanto, se garantiza que el bucle se ejecutará al menos una vez.
 
-[Constants](constants.md) `True` and `False` can be used as the loop condition.
+Las [constantes](constants.md) `True` y `False` se pueden utilizar como condición de bucle.
 
 ```sb3
 repeat
-  // the loop has the only iteration
+  // el bucle tiene la única iteración
 until true 
 ```
 
 ```sb3
 repeat
-  // the loop executes infinitely until it's stopped with the Break command
+  // el bucle se ejecuta infinitamente hasta que se detiene con el comando Break
 until false
 ```
 
 {% hint style="info" %}
-Currently the compiler accepts only one opcode in the loop condition, but you can check more conditions after the loop body and use the commands `Break` and `Continue`.
+Actualmente, el compilador acepta solo un opcode en la condición del bucle, pero puede verificar más condiciones antes del cuerpo del bucle y usar los comandos `Break` y `Continue`.
 
 ```sb3
 repeat  
-   &lt;loop body&gt;
+   <cuerpo del bucle>
    if and
-     $var &gt;= 0
-     $var &lt;= 100
+     $var >= 0
+     $var <= 100
    then
      Break
    end
-  // loop executes while $var is in the range [0...100]      
+  // el bucle se ejecuta mientras $var está en el rango [0...100]
 until false
 ```
 {% endhint %}
 
-## Continue and Break
+## Continue y Break
 
-If you want to skip the current iteration and proceed to the next one, use the `Continue` command. 
+Si desea omitir la iteración actual y pasar a la siguiente, utilice el comando `Continue`.
 
-The `Break` command causes the loop to stop immediately and proceed to the command after the loop body.
+El comando `Break` hace que el bucle se detenga inmediatamente y continúe con el comando después del cuerpo del bucle.
 
-They can substitute an opcode parameter (e.g., `jf Continue`) or serve as a standalone statement.
+Pueden sustituir un parámetro de opcode (por ejemplo, `jf Continue`) o servir como una declaración independiente.
 
 ```sb3
 while true
   if
     not $currentactor.dead
-  jf Break // exit the loop
+  jf Break // salir del bucle
 
   if
     $currentactor.dead
   then
-    Continue // go to the next iteration
+    Continue // ir a la siguiente iteración
   end
 end
 ```
